Update Humanoid Robotics book content and configuration

--- a/textbook/docs/02-ros2.md
+++ b/textbook/docs/02-ros2.md
@@ -1,6 +1,7 @@
 ---
+id: ros2
 title: Module 1 — The Robotic Nervous System (ROS 2)
-slug: /ros2
+slug: /docs/ros2
 sidebar_position: 2
 ---
 
@@ -8,14 +9,31 @@ sidebar_position: 2
 
 ROS 2 is the middleware that connects sensors, controllers, and planners in a robot.
 
-## Key concepts
-- **Nodes** — programs that do work.
-- **Topics** — publish/subscribe channels for streaming data (e.g., camera frames).
-- **Services** — request/response RPC-like calls.
-- **Actions** — long-running goals with feedback (e.g., move to location).
-- **rclpy** — ROS 2 Python client library.
+## Core Concepts
 
-## Practical tasks
-- Create a simple `talker` and `listener` node in Python.
-- Write a launch file to run multiple nodes.
-- Learn URDF to describe robot parts (joints, links, sensors).
+- **Nodes**: Individual processes that perform computation
+- **Topics**: Streams of messages sent between nodes
+- **Services**: Synchronous request/response communication
+- **Actions**: Asynchronous goal-oriented communication with feedback
+
+## Why ROS 2?
+
+ROS 2 addresses the limitations of ROS 1 by providing:
+
+- Real-time capabilities
+- Multi-robot systems support
+- Security features
+- Cross-platform compatibility (Linux, Windows, macOS)
+
+## ROS 2 Architecture
+
+ROS 2 uses the Data Distribution Service (DDS) as its communication layer, enabling:
+
+- Distributed communication
+- Language independence
+- Quality of Service (QoS) policies
+- Security and encryption
+
+## Setting up ROS 2
+
+We'll be using ROS 2 Humble Hawksbill, which provides long-term support for robotics applications.
